<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignUp_Process.SignUp5Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_s_your_name"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/edit_text_style"
        android:inputType="text"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_appears"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        />
    <Button
        android:id="@+id/next"
        android:onClick="openNext"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_curved_gray"
        android:enabled="false"
        android:text="@string/create"
        android:textColor="@color/colorGradient2"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_terms"
        android:id="@+id/t1"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:id="@+id/t2"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        />

</LinearLayout>