<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".WelcomeActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_spotify_white"
        android:layout_marginTop="150dp" />
    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:fontFamily="sans-serif"
        android:text="@string/millions_of_songs"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/free_on_symphonia"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@+id/t1"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/signup"
        android:layout_marginTop="45dp"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@+id/t2"
        android:background="@drawable/btn_curved_green"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_free"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/connectfacebook"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/connect_with_facebook"
        android:background="@drawable/btn_curved_border"
        android:layout_below="@+id/signup"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/log_in"
        android:layout_below="@+id/connectfacebook"
        android:background="@null"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

</RelativeLayout>