<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Listener_Register.WelcomeListenerActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/ic_spotify_white" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:baselineAligned="false"
        android:fontFamily="sans-serif"
        android:text="@string/millions_of_songs"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t1"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dp"
        android:text="@string/free_on_symphonia"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signup"
        android:onClick="openSignUp1"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@+id/t2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/btn_curved_green"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up_free"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/connectfacebook"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@+id/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_curved_border"
        android:fontFamily="sans-serif"
        android:text="@string/connect_with_facebook"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@+id/connectfacebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_transparent"
        android:fontFamily="sans-serif"
        android:onClick="openLogin"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>