<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#10000000">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:layout_weight="9"
    android:background="@drawable/background_ad"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_symphonia_ad"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/symphonia_premium"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/colorDark"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="6sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeStepGranularity="1sp"
            />
    </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="6dp"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/locked_songs"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:textColor="@color/colorDark"
        android:fontFamily="sans-serif"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="24sp"
        app:autoSizeStepGranularity="2sp"/>
    <TextView
        android:layout_marginLeft="6dp"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/no_worries"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:textColor="@color/colorDark"
        android:fontFamily="sans-serif"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="24sp"
        app:autoSizeStepGranularity="2sp"/>

    <ImageView
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/img_ad2"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="6dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/listen_ad_free"
        android:textColor="@color/colorDark"
        android:fontFamily="sans-serif"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeMaxTextSize="22sp"
        app:autoSizeStepGranularity="2sp"/>

    <TextView
        android:layout_marginLeft="6dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/monthly_subscription"
        android:textColor="@color/colorDark"
        android:fontFamily="sans-serif"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeMaxTextSize="14sp"
        app:autoSizeStepGranularity="1sp"/>

    <Button
        android:id="@+id/promote_premium"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_cruved_border_semitransparent"
        android:text="@string/get_premium"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeStepGranularity="1sp"
        />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
    <Button
        android:id="@+id/dismiss_ad"
        android:enabled="false"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#10000000"
        android:text="@string/dismiss"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeStepGranularity="1sp"
        android:layout_marginBottom="10dp"
        />
    </LinearLayout>
</LinearLayout>
</ScrollView>