<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Listener_Register.SignUp3Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_date_of_birth"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="bold" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:theme="@style/MyDatePicker"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/validDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_requirements"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        />
    <Button
        android:id="@+id/next"
        android:onClick="openNext"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_curved_gray"
        android:enabled="false"
        android:text="@string/next"
        android:textColor="@color/colorGradient2"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>